feat: introduced condition support and relative path masking by annotations.